Make sure the pref size is at least as large as the min size for leaf boxes, just like we do for container boxes.  Bug 246706, r+sr=dbaron.