layout/xul/base/src/nsBox.cpp
@@ -903,6 +903,13 @@ nsBox::GetPrefSize(nsBoxLayoutState& aState, nsSize& aSize)
   AddBorderAndPadding(aSize);
   AddInset(aSize);
   nsIBox::AddCSSPrefSize(aState, this, aSize);
+
+  nsSize minSize(0, 0), maxSize(0, 0);
+  GetMinSize(aState, minSize);
+  GetMaxSize(aState, maxSize);
+
+  BoundsCheck(minSize, aSize, maxSize);
+
   return NS_OK;
 }
 
